# fl-mcp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG_MANIFEST.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  Makefile  README.md  SECURITY.md  alembic.ini  fastmcp.json  fl-mcp-codex-task-list.md  fl-mcp-e2e-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/agents/: integration-marshal.md
.claude/commands/: rebuild-schemas.md
.claude/hooks/: pre-commit-checks.md
.claude/output-styles/: concise.md
.claude/playbooks/: release.md
.claude/templates/: task-ledger-row.md
.github/: AGENTS.md  CODEOWNERS  pull_request_template.md  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  docs-deploy.yml  release-prerelease.yml  release-stable.yml  release.yml  security-license.yml  security.yml
adr/: 0001-resources-first.md  0002-canonical-graph.md  0003-transaction-envelope.md  0004-minimal-public-tools.md  index.md  template.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
docs/: .gitignore  AGENTS.md  README.md  interfaces.md  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
docs/app/: AGENTS.md  global.css  layout.tsx  page.tsx
docs/content/: AGENTS.md  index.mdx
docs/scripts/: AGENTS.md  build.mjs  check.mjs  dev.mjs  generate-reference.mjs
docs/templates/: design-proposal.md
fl-bundle/: AGENTS.md  README.md
fl-bundle/controller/: README.md  device_FL_MCP_Bridge.py  fl_mcp_bridge_runner.py
fl-bundle/piano-roll/: README.md
fl-bundle/shared-assets/: README.md
fl-bundle/vfx/: README.md
goals/: live-support-matrix.md
goals/add-fl-mcp-production-flow-skill/: plan.md
goals/finish-v0-1-0-fl-surface-fastmcp/: facts.md  goal.md  plan.md
goals/manual-fl-studio-audit/: facts.md  goal.md  plan.md
goals/simplify-agent-surfaces/: audit.md  facts.md  fl-capability-audit.md  goal.md  plan.md
goals/tier-b-release/: RELEASE_NOTES_DRAFT.md
helper/: AGENTS.md  Package.swift  README.md
helper/FLMCPHelper/: App.swift  ContentView.swift  README.md
providers/template_provider/: pyproject.toml
scripts/: quality.sh
skills/: AGENTS.md
skills/fl-mcp-production-flow/: SKILL.md
src/: AGENTS.md
src/fastmcp/: __init__.py
src/fl_mcp/: __init__.py  cli.py  config.py  exceptions.py  logging.py
src/loguru/: __init__.py
src/pydantic/: __init__.py
src/pydantic_settings/: __init__.py
src/sqlmodel/: __init__.py
src/typer/: __init__.py  testing.py
tests/: conftest.py
tests/benchmarks/: test_smoke.py  test_smoke_benchmark_checks.py
tests/contract/: test_canonical_graph_roundtrip.py  test_compact_tool_metadata.py  test_model_completeness.py  test_provider_protocol.py  test_public_surface.py  test_resource_and_schema_contracts.py  test_resource_auth.py  test_schema_json_consistency.py
tests/integration/: test_cli.py  test_cli_edge_cases.py  test_request_lifecycle.py  test_server_bootstrap_transports.py
tests/unit/: test_adapter_task_lock.py  test_auth_edge_cases.py  test_auth_token_enforcement.py  test_automation_domain.py  test_batch_execute_limits.py  test_bridge_diagnostics.py  test_bridge_execution.py  test_bridge_host_client.py  test_bridge_idempotency.py  test_bridge_mode_transparency.py  test_compact_error_envelopes.py  test_concurrency_stress.py  test_config_comprehensive.py  test_config_determinism.py  test_control_plane_and_health.py  test_controller_install.py  test_determinism.py  test_envelope_comprehensive.py  test_error_paths.py  test_exceptions.py  test_execute_path_validation.py  test_fl_surface_comprehensive.py  test_fl_surface_task_tools.py  test_graph.py  test_graph_advanced.py  test_hardstyle_template_recipe.py  test_health_degradation.py  test_imports.py  test_live_manifest.py  test_local_path_validation.py  test_loopback_host.py  test_middleware_safety.py  test_mock_dispatch_coverage.py  test_mock_generators.py  test_mock_result_schemas.py  test_operations.py  test_persistence_and_prompts.py  (+18 more)
(+160 files in other folders)
