[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "fl-mcp"
version = "0.1.0"
description = "fl-mcp server package"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "fl-mcp contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fl_mcp"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
