[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "fl-mcp"
version = "0.1.0"
description = "Local-only OSS MCP server for FL Studio"
keywords = ["mcp", "fl-studio", "music-production", "daw", "model-context-protocol"]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "FL MCP Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
  "fastmcp[tasks]>=3.4.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.0",
]
# Note: key-value (py-key-value-aio) is a transitive dependency via fastmcp.

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "ty>=0.0.49",
  "pre-commit>=3.8.0",
]

[project.scripts]
fl-mcp = "fl_mcp.cli.main:main"

[project.urls]
Homepage = "https://github.com/wyattowalsh/fl-mcp"
Documentation = "https://fl-mcp.vercel.app"
Repository = "https://github.com/wyattowalsh/fl-mcp"
Issues = "https://github.com/wyattowalsh/fl-mcp/issues"
Changelog = "https://github.com/wyattowalsh/fl-mcp/blob/main/docs/content/docs/release-notes.mdx"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_mcp"]
force-include = { "fl-bundle" = "fl-bundle" }

[tool.hatch.build.targets.sdist]
include = [
  "/fl-bundle",
  "/src/fl_mcp",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "A", "RUF"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/fl_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
    "raise NotImplementedError",
]
